# rust-lkm-template

./: Cargo.toml  Kbuild  Makefile  README.md  lkm.rs  module.rs
scripts/: build  hot-reload  run  setup
